@@ -19,6 +19,7 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.reflect.Method;
+import java.util.Locale;
 import java.util.OptionalLong;
 import java.util.Properties;
 import java.util.concurrent.TimeUnit;
@@ -36,6 +37,8 @@ import org.eclipse.rdf4j.model.Literal;
 import org.eclipse.rdf4j.model.Statement;
 import org.eclipse.rdf4j.model.util.Values;
 import org.eclipse.rdf4j.model.vocabulary.RDF;
+import org.eclipse.rdf4j.query.BindingSet;
+import org.eclipse.rdf4j.query.QueryInterruptedException;
 import org.eclipse.rdf4j.query.TupleQuery;
 import org.eclipse.rdf4j.query.TupleQueryResult;
 import org.eclipse.rdf4j.query.algebra.TupleExpr;
@@ -46,7 +49,9 @@ import org.eclipse.rdf4j.repository.sail.SailRepository;
 import org.eclipse.rdf4j.repository.sail.SailRepositoryConnection;
 import org.eclipse.rdf4j.repository.util.RDFInserter;
 import org.eclipse.rdf4j.sail.lmdb.LmdbStore;
+import org.eclipse.rdf4j.sail.lmdb.config.FrontierEstimatorMode;
 import org.eclipse.rdf4j.sail.lmdb.config.LmdbStoreConfig;
+import org.eclipse.rdf4j.sail.lmdb.frontier.FrontierSynopsisStatus;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
@@ -69,27 +74,16 @@ import org.openjdk.jmh.runner.options.OptionsBuilder;
 import org.openjdk.jmh.runner.options.TimeValue;
 
 @State(Scope.Benchmark)
-@Warmup(iterations = 2, batchSize = 1, timeUnit = TimeUnit.SECONDS, time = 10)
+@Warmup(iterations = 3, batchSize = 1, timeUnit = TimeUnit.SECONDS, time = 2)
 @BenchmarkMode({ Mode.AverageTime })
-@Fork(value = 1, jvmArgs = { "-Xms1G", "-Xmx1G" })
-@Measurement(iterations = 3, batchSize = 1, timeUnit = TimeUnit.SECONDS, time = 2)
+@Fork(value = 1, jvmArgs = { "-Xms1G", "-Xmx16G", "--add-modules=jdk.incubator.vector" })
+@Measurement(iterations = 2, batchSize = 1, timeUnit = TimeUnit.SECONDS, time = 2)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 public class ThemeQueryBenchmark {
 
 	private static final String STORE_NAME = "lmdb";
-	private static final String TARGET_DIRECTORY_ROOT = "core/sail/lmdb/";
-	private static final File STORE_DIRECTORY;
-
-	static {
-		File target = new File("target", "lmdb-theme-query-benchmark");
-		if (target.getAbsolutePath().toLowerCase().contains(TARGET_DIRECTORY_ROOT)) {
-			STORE_DIRECTORY = target;
-		} else {
-			// In case the benchmark is run from an IDE with a different working directory, we want to ensure the store
-			// directory is still in the target directory of the project.
-			STORE_DIRECTORY = new File(TARGET_DIRECTORY_ROOT + "target", "lmdb-theme-query-benchmark");
-		}
-	}
+	private static final File STORE_DIRECTORY = BenchmarkPathSupport.resolveTarget("lmdb-theme-query-benchmark")
+			.toFile();
 
 	private static final String TRIPLES_DATA_FILE = "triples/data.mdb";
 	private static final String VALUES_DATA_FILE = "values/data.mdb";
@@ -101,36 +95,45 @@ public class ThemeQueryBenchmark {
 	private static final String COUNT_BINDING_NAME = "count";
 	static final String WAIT_FOR_SKETCHES_PROPERTY = "rdf4j.lmdb.themeQueryBenchmark.waitForSketches";
 	static final String WAIT_FOR_SKETCHES_TIMEOUT_SECONDS_PROPERTY = "rdf4j.lmdb.themeQueryBenchmark.waitForSketchesTimeoutSeconds";
-	private static final long DEFAULT_WAIT_FOR_SKETCHES_TIMEOUT_SECONDS = 60L;
+	private static final long DEFAULT_WAIT_FOR_SKETCHES_TIMEOUT_SECONDS = 300L;
 
 	@Param({
 			"0",
-//			"1",
-//			"2",
-//			"3",
-//			"4",
+			"1",
+			"2",
+			"3",
+			"4",
 			"5",
-//			"6",
-//			"7",
-//			"8",
-//			"9",
-//			"10",
+			"6",
+			"7",
+			"8",
+			"9",
+			"10",
 //			"11",
 //			"12"
 	})
 	public int z_queryIndex;
 
 	@Param({
-//			"MEDICAL_RECORDS",
-//			"SOCIAL_MEDIA",
-//			"LIBRARY",
+			"MEDICAL_RECORDS",
+			"SOCIAL_MEDIA",
+			"LIBRARY",
 //			"ENGINEERING",
 //			"HIGHLY_CONNECTED",
 //			"TRAIN",
 //			"ELECTRICAL_GRID",
-			"PHARMA"
+//			"PHARMA",
+//			"SPARSE",
 	})
 	public String themeName;
+
+	@Param({ "false" })
+	public boolean sketchEstimatorEnabled;
+
+	@Param({ "Telemetry" })
+	public String queryExplanationLevel;
+
+	boolean loadOnlySelectedTheme;
 
 	private SailRepository repository;
 	private LmdbStore store;
@@ -143,21 +146,26 @@ public class ThemeQueryBenchmark {
 		var opt = new OptionsBuilder()
 				.include(ThemeQueryBenchmark.class.getName() + ".executeQuery")
 				.forks(0)
-				.measurementIterations(10)
+				.measurementIterations(5)
 				.measurementBatchSize(1)
-				.measurementTime(TimeValue.milliseconds(1))
-				.warmupIterations(10)
+				.measurementTime(TimeValue.milliseconds(10000))
+				.warmupIterations(0)
 				.build();
 		new Runner(opt).run();
 	}
 
 	@Setup(Level.Trial)
 	public void setup() throws IOException {
+//		try {
+//			Thread.sleep(4000);
+//		} catch (InterruptedException e) {
+//			throw new RuntimeException(e);
+//		}
 		theme = Theme.valueOf(themeName);
 		File storeDirectory = storeDirectory();
 		System.out.println(storeDirectory.getAbsolutePath());
 		query = ThemeQueryCatalog.queryFor(theme, z_queryIndex);
-		System.out.println("### Original Query ###");
+		System.out.println("\n### Original Query ###");
 		System.out.println(query);
 		System.out.println();
 
@@ -165,69 +173,267 @@ public class ThemeQueryBenchmark {
 		if (!storeDirectory.exists() && !storeDirectory.mkdirs()) {
 			throw new IOException("Unable to create fixed LMDB benchmark directory: " + storeDirectory);
 		}
-		storeConfig = ConfigUtil.createConfig();
-		storeConfig.setSketchEstimatorEnabled(false);
+		storeConfig = createStoreConfig();
 		store = new LmdbStore(storeDirectory, storeConfig);
 		repository = new SailRepository(store);
 		ensureDataLoadedAndValidated();
 		waitForSketchesIfEnabled();
+		recordInitializedDbFileSizes();
 		if (QueryPlanCapture.isCaptureEnabled()) {
 			captureQueryPlanSnapshot();
 		}
 
+		if (!Boolean.getBoolean(PROFILING_PROPERTY)) {
+			try (SailRepositoryConnection connection = repository.getConnection()) {
+				System.out.println("\n### Optimized Query - Before running the query ###");
+				Explanation explain = connection.prepareTupleQuery(query).explain(Explanation.Level.Optimized);
+				System.out.println(explain);
+				TupleExpr tupleExpr = (TupleExpr) explain.tupleExpr();
+				System.out.println(new TupleExprIRRenderer().render(tupleExpr));
+				System.out.println();
+			}
+
+		}
+
+	}
+
+	@TearDown(Level.Trial)
+	public void tearDown() {
+//		if (previousJoinOrderStrategy != null) {
+//			QueryJoinOptimizer.JOIN_ORDER_STRATEGY = previousJoinOrderStrategy;
+//			previousJoinOrderStrategy = null;
+//		}
+
+		if (!Boolean.getBoolean(PROFILING_PROPERTY)) {
+			try (SailRepositoryConnection connection = repository.getConnection()) {
+				if (queryExplanationLevel == null || queryExplanationLevel.isBlank()) {
+					queryExplanationLevel = "Telemetry";
+				}
+				System.out.println("\n### " + queryExplanationLevel + " Query ###");
+				Explanation explain = connection.prepareTupleQuery(query)
+						.explain(Explanation.Level.valueOf(queryExplanationLevel));
+				System.out.println(explain);
+				TupleExpr tupleExpr = (TupleExpr) explain.tupleExpr();
+				System.out.println(new TupleExprIRRenderer().render(tupleExpr));
+				System.out.println();
+			}
+			// try (SailRepositoryConnection connection = repository.getConnection()) {
+			// System.out.println("### Telemetry Query ###");
+			// Explanation explain = connection.prepareTupleQuery(query).explain(Explanation.Level.Telemetry);
+			// System.out.println(explain);
+			// TupleExpr tupleExpr = (TupleExpr) explain.tupleExpr();
+//				System.out.println(new TupleExprIRRenderer().render(tupleExpr));
+			// System.out.println();
+			// }
+		}
+		if (repository != null) {
+			repository.shutDown();
+			repository = null;
+		}
+		store = null;
+		storeConfig = null;
+//		restoreBenchmarkEstimatorProperties();
 	}
 
 	@Benchmark
 	public long executeQuery() {
+		return executeQuery(120);
+	}
+
+	public long executeQuery(int maxExecutionTimeSeconds) {
+		long benchmarkResult;
 		try (var connection = repository.getConnection()) {
-			long count;
 			OptionalLong expectedCountBindingValue = ThemeQueryCatalog.expectedCountBindingValueFor(theme,
 					z_queryIndex);
 			TupleQuery tupleQuery = connection.prepareTupleQuery(query);
-			tupleQuery.setMaxExecutionTime(70);
-			try (var evaluate = tupleQuery.evaluate()) {
-				count = countRowsAndVerifyCountBinding(evaluate, expectedCountBindingValue);
-			}
+			tupleQuery.setMaxExecutionTime(maxExecutionTimeSeconds);
+			QueryResultSummary result = evaluateQuery(tupleQuery, expectedCountBindingValue.isPresent());
+			assertExpectedResult(result, expectedCountBindingValue);
 
-			if (count != expected) {
-				throw new IllegalStateException(
-						"Unexpected result row count for " + queryDescription() + ": expected " + expected
-								+ " but got " + count);
-			}
+			benchmarkResult = benchmarkResult(result, expectedCountBindingValue);
+		} catch (RuntimeException | Error e) {
+			printBenchmarkExplanation(maxExecutionTimeSeconds, isQueryInterrupted(e), e);
+			throw e;
+		}
+		// printBenchmarkExplanation(maxExecutionTimeSeconds, false, null);
+		return benchmarkResult;
+	}
 
-			return count;
+	long executeCountQuery(String queryString, long expectedCountBindingValue, int maxExecutionTimeSeconds) {
+		try (var connection = repository.getConnection()) {
+			TupleQuery tupleQuery = connection.prepareTupleQuery(queryString);
+			tupleQuery.setMaxExecutionTime(maxExecutionTimeSeconds);
+			QueryResultSummary result = evaluateQuery(tupleQuery, true);
+			assertExpectedCountQueryResult(queryString, result, expectedCountBindingValue);
+			return result.countBindingValue;
 		}
 	}
 
-	private long countRowsAndVerifyCountBinding(TupleQueryResult evaluate, OptionalLong expectedCountBindingValue) {
-		long count = 0;
-		while (evaluate.hasNext()) {
-			var bindingSet = evaluate.next();
-			count++;
-			if (expectedCountBindingValue.isPresent()) {
-				if (count > 1) {
-					throw new IllegalStateException("Expected exactly one count row for " + queryDescription()
-							+ " but saw at least " + count + " rows");
+	TimedCountQuery executeTimedCountQuery(String queryString, long expectedCountBindingValue,
+			int maxExecutionTimeSeconds) {
+		long started = System.nanoTime();
+		try (var connection = repository.getConnection()) {
+			TupleQuery tupleQuery = connection.prepareTupleQuery(queryString);
+			tupleQuery.setMaxExecutionTime(maxExecutionTimeSeconds);
+			long prepared = System.nanoTime();
+			long rowCount = 0L;
+			Long countBindingValue = null;
+			long opened;
+			try (TupleQueryResult result = tupleQuery.evaluate()) {
+				opened = System.nanoTime();
+				while (result.hasNext()) {
+					BindingSet bindings = result.next();
+					rowCount++;
+					if (rowCount > 1) {
+						throw new IllegalStateException("Expected exactly one count row for " + queryDescription()
+								+ " but saw at least " + rowCount + " rows");
+					}
+					countBindingValue = countBindingValue(bindings);
 				}
-				var value = bindingSet.getValue(COUNT_BINDING_NAME);
-				if (!(value instanceof Literal literal)) {
-					throw new IllegalStateException("Expected literal ?" + COUNT_BINDING_NAME + " binding for "
-							+ queryDescription() + " but got " + value);
-				}
-				long actualCountBindingValue = literal.longValue();
-				long expectedValue = expectedCountBindingValue.getAsLong();
-				if (actualCountBindingValue != expectedValue) {
-					throw new IllegalStateException("Unexpected ?" + COUNT_BINDING_NAME + " binding for "
-							+ queryDescription() + ": expected " + expectedValue + " but got "
-							+ actualCountBindingValue);
+			}
+			long completed = System.nanoTime();
+			QueryResultSummary result = new QueryResultSummary(rowCount, countBindingValue);
+			assertExpectedCountQueryResult(queryString, result, expectedCountBindingValue);
+			return new TimedCountQuery(result.countBindingValue, prepared - started, opened - prepared,
+					completed - opened);
+		}
+	}
+
+	record TimedCountQuery(long countBindingValue, long preparationNanos, long openNanos, long consumptionNanos) {
+	}
+
+	private QueryResultSummary evaluateQuery(TupleQuery tupleQuery, boolean captureCountBinding) {
+		long rowCount = 0L;
+		Long countBindingValue = null;
+		try (TupleQueryResult result = tupleQuery.evaluate()) {
+			while (result.hasNext()) {
+				BindingSet bindings = result.next();
+				rowCount++;
+				if (captureCountBinding) {
+					if (rowCount > 1) {
+						throw new IllegalStateException("Expected exactly one count row for " + queryDescription()
+								+ " but saw at least " + rowCount + " rows");
+					}
+					countBindingValue = countBindingValue(bindings);
 				}
 			}
 		}
-		if (expectedCountBindingValue.isPresent() && count == 0) {
-			throw new IllegalStateException("Expected exactly one count row for " + queryDescription()
-					+ " but query returned no rows");
+		return new QueryResultSummary(rowCount, countBindingValue);
+	}
+
+	private Long countBindingValue(BindingSet bindings) {
+		var value = bindings.getValue(COUNT_BINDING_NAME);
+		if (value == null) {
+			return null;
 		}
-		return count;
+		if (value instanceof Literal literal) {
+			return literal.longValue();
+		}
+		throw new IllegalStateException("Unexpected aggregate binding type for " + COUNT_BINDING_NAME + ": " + value);
+	}
+
+	private void assertExpectedResult(QueryResultSummary result, OptionalLong expectedCountBindingValue) {
+		if (result.rowCount != expected) {
+			throw new IllegalStateException(
+					"Unexpected result row count for " + queryDescription() + ": expected " + expected
+							+ " but got " + result.rowCount);
+		}
+		if (expectedCountBindingValue.isPresent()) {
+			if (result.countBindingValue == null) {
+				throw new IllegalStateException("Expected literal ?" + COUNT_BINDING_NAME + " binding for "
+						+ queryDescription() + " but got null");
+			}
+			long expectedValue = expectedCountBindingValue.getAsLong();
+			if (result.countBindingValue != expectedValue) {
+				throw new IllegalStateException("Unexpected ?" + COUNT_BINDING_NAME + " binding for "
+						+ queryDescription() + ": expected " + expectedValue + " but got "
+						+ result.countBindingValue);
+			}
+		}
+	}
+
+	private void assertExpectedCountQueryResult(String queryString, QueryResultSummary result,
+			long expectedCountBindingValue) {
+		if (result.rowCount != 1L) {
+			throw new IllegalStateException("Expected exactly one count row for forced benchmark query but got "
+					+ result.rowCount + "\n" + queryString);
+		}
+		if (result.countBindingValue == null) {
+			throw new IllegalStateException("Expected literal ?" + COUNT_BINDING_NAME
+					+ " binding for forced benchmark query but got null\n" + queryString);
+		}
+		if (result.countBindingValue != expectedCountBindingValue) {
+			throw new IllegalStateException("Unexpected ?" + COUNT_BINDING_NAME
+					+ " binding for forced benchmark query: expected " + expectedCountBindingValue + " but got "
+					+ result.countBindingValue + "\n" + queryString);
+		}
+	}
+
+	private long benchmarkResult(QueryResultSummary result, OptionalLong expectedCountBindingValue) {
+		if (expectedCountBindingValue.isPresent()) {
+			return result.countBindingValue;
+		}
+		return result.rowCount;
+	}
+
+	private void printBenchmarkExplanation(int maxExecutionTimeSeconds, boolean timedOut, Throwable originalFailure) {
+		try {
+			Explanation.Level level = benchmarkExplanationLevel(timedOut);
+			try (var connection = repository.getConnection()) {
+				TupleQuery tupleQuery = connection.prepareTupleQuery(query);
+				tupleQuery.setMaxExecutionTime(maxExecutionTimeSeconds);
+				Explanation explain = tupleQuery.explain(level);
+				System.out.println();
+				System.out.println("\n### Query Explanation After Benchmark"
+						+ " theme=" + themeName
+						+ " queryIndex=" + z_queryIndex
+						+ " timedOut=" + timedOut
+						+ " level=" + level + " ###");
+				System.out.println(explain);
+				System.out.println();
+			}
+		} catch (RuntimeException | Error e) {
+			if (originalFailure != null) {
+				originalFailure.addSuppressed(e);
+			} else {
+				throw e;
+			}
+		}
+	}
+
+	Explanation.Level benchmarkExplanationLevel(boolean timedOut) {
+		if (timedOut) {
+			return Explanation.Level.Optimized;
+		}
+		return explanationLevel(queryExplanationLevel);
+	}
+
+	static Explanation.Level explanationLevel(String configured) {
+		if (configured == null || configured.isBlank()) {
+			return Explanation.Level.Timed;
+		}
+		String trimmed = configured.trim();
+		for (Explanation.Level level : Explanation.Level.values()) {
+			if (level.name().equalsIgnoreCase(trimmed)) {
+				return level;
+			}
+		}
+		try {
+			return Explanation.Level.valueOf(trimmed.toUpperCase(Locale.ROOT));
+		} catch (IllegalArgumentException e) {
+			return Explanation.Level.Timed;
+		}
+	}
+
+	private static boolean isQueryInterrupted(Throwable throwable) {
+		Throwable current = throwable;
+		while (current != null) {
+			if (current instanceof QueryInterruptedException) {
+				return true;
+			}
+			current = current.getCause();
+		}
+		return false;
 	}
 
 	private String queryDescription() {
@@ -258,14 +464,36 @@ public class ThemeQueryBenchmark {
 	}
 
 	private void waitForSketchesIfEnabled() throws IOException {
+		repository.init();
+		if (storeConfig.getFrontierEstimatorMode() != FrontierEstimatorMode.OFF) {
+			FrontierSynopsisStatus frontierStatus = store.rebuildFrontierSynopsis();
+			if (frontierStatus != FrontierSynopsisStatus.READY) {
+				throw new IOException("Frontier is not ready for Theme benchmark: " + frontierStatus);
+			}
+		}
+		if (!sketchEstimatorEnabled) {
+			return;
+		}
 		if (!Boolean.parseBoolean(System.getProperty(WAIT_FOR_SKETCHES_PROPERTY, "true"))) {
 			return;
 		}
-		repository.init();
 		long timeoutSeconds = Long.getLong(WAIT_FOR_SKETCHES_TIMEOUT_SECONDS_PROPERTY,
 				DEFAULT_WAIT_FOR_SKETCHES_TIMEOUT_SECONDS);
 		BenchmarkJoinEstimatorSupport.awaitEstimatorReady(store, "theme benchmark setup", timeoutSeconds,
 				TimeUnit.SECONDS);
+	}
+
+	private void recordInitializedDbFileSizes() throws IOException {
+		/*
+		 * The triples environment also owns derived-state metadata. Frontier publication can therefore allocate LMDB
+		 * pages without changing a single RDF statement. Capture the reusable-store baseline only after all mandatory
+		 * derived state is ready; otherwise the next trial mistakes that metadata-only allocation for a dataset change
+		 * and destroys valid learned sidecars while rebuilding an unchanged store.
+		 */
+		DbFileSizes initializedSizes = currentDbFileSizes();
+		if (!initializedSizes.equals(readExpectedDbFileSizes())) {
+			writeExpectedDbFileSizes(initializedSizes);
+		}
 	}
 
 	private void rebuildStoreFromScratch() throws IOException {
@@ -279,7 +507,7 @@ public class ThemeQueryBenchmark {
 			throw new IOException("Unable to recreate fixed LMDB benchmark directory: " + storeDirectory);
 		}
 
-		storeConfig = ConfigUtil.createConfig();
+		storeConfig = createStoreConfig();
 		storeConfig.setIterationCacheSyncThreshold(0);
 		store = new LmdbStore(storeDirectory, storeConfig);
 		repository = new SailRepository(store);
@@ -295,6 +523,12 @@ public class ThemeQueryBenchmark {
 
 		store = new LmdbStore(storeDirectory, storeConfig);
 		repository = new SailRepository(store);
+	}
+
+	private LmdbStoreConfig createStoreConfig() {
+		LmdbStoreConfig config = ConfigUtil.createConfig();
+		config.setSketchEstimatorEnabled(sketchEstimatorEnabled);
+		return config;
 	}
 
 	private DbFileSizes readExpectedDbFileSizes() throws IOException {
@@ -371,15 +605,18 @@ public class ThemeQueryBenchmark {
 	private void loadData() throws IOException {
 		StopWatch started = StopWatch.createStarted();
 		try (var connection = repository.getConnection()) {
-			connection.begin(IsolationLevels.NONE);
 			var inserter = new RDFInserter(connection);
 //			System.out.println("Loading theme dataset: " + theme);
 //			ThemeDataSetGenerator.generate(theme, inserter);
-			for (var themeDataset : Theme.values()) {
+			Theme[] datasets = loadOnlySelectedTheme ? new Theme[] { theme } : Theme.values();
+			for (var themeDataset : datasets) {
+				connection.begin(IsolationLevels.NONE);
+
 				System.out.println("Loading theme dataset: " + themeDataset);
 				ThemeDataSetGenerator.generate(themeDataset, inserter);
+				connection.commit();
+
 			}
-			connection.commit();
 		}
 		started.stop();
 
@@ -387,7 +624,9 @@ public class ThemeQueryBenchmark {
 	}
 
 	private File storeDirectory() {
-//		return new File(STORE_DIRECTORY, theme.name().toLowerCase());
+		if (loadOnlySelectedTheme) {
+			return new File(STORE_DIRECTORY, theme.name().toLowerCase(Locale.ROOT) + "-only");
+		}
 		return new File(STORE_DIRECTORY, "complete");
 	}
 
@@ -439,6 +678,32 @@ public class ThemeQueryBenchmark {
 		}
 	}
 
+	TupleExpr explainTelemetryTupleExpr() {
+		try (SailRepositoryConnection connection = repository.getConnection()) {
+			Explanation explanation = connection.prepareTupleQuery(query).explain(Explanation.Level.Telemetry);
+			return (TupleExpr) explanation.tupleExpr();
+		}
+	}
+
+	String explainOptimizedPlan() {
+		return explainOptimizedPlan(query);
+	}
+
+	String explainOptimizedPlan(String queryString) {
+		try (SailRepositoryConnection connection = repository.getConnection()) {
+			return connection.prepareTupleQuery(queryString)
+					.explain(Explanation.Level.Optimized)
+					.toString();
+		}
+	}
+
+	String renderOptimizedQuery(String queryString) {
+		try (SailRepositoryConnection connection = repository.getConnection()) {
+			Explanation explanation = connection.prepareTupleQuery(queryString).explain(Explanation.Level.Optimized);
+			return new TupleExprIRRenderer().render((TupleExpr) explanation.tupleExpr());
+		}
+	}
+
 	EvaluationStatistics evaluationStatistics() {
 		try {
 			Method getBackingStore = LmdbStore.class.getDeclaredMethod("getBackingStore");
@@ -452,42 +717,8 @@ public class ThemeQueryBenchmark {
 		}
 	}
 
-	@TearDown(Level.Trial)
-	public void tearDown() {
-//		if (previousJoinOrderStrategy != null) {
-//			QueryJoinOptimizer.JOIN_ORDER_STRATEGY = previousJoinOrderStrategy;
-//			previousJoinOrderStrategy = null;
-//		}
-
-		if (!Boolean.getBoolean(PROFILING_PROPERTY)) {
-			try (SailRepositoryConnection connection = repository.getConnection()) {
-				System.out.println("### Optimized Query ###");
-				Explanation explain = connection.prepareTupleQuery(query).explain(Explanation.Level.Optimized);
-				System.out.println(explain);
-				TupleExpr tupleExpr = (TupleExpr) explain.tupleExpr();
-				System.out.println(new TupleExprIRRenderer().render(tupleExpr));
-				System.out.println();
-			}
-			try (SailRepositoryConnection connection = repository.getConnection()) {
-				System.out.println("### Telemetry Query ###");
-				Explanation explain = connection.prepareTupleQuery(query).explain(Explanation.Level.Telemetry);
-				System.out.println(explain);
-				TupleExpr tupleExpr = (TupleExpr) explain.tupleExpr();
-				System.out.println(new TupleExprIRRenderer().render(tupleExpr));
-				System.out.println();
-			}
-		}
-		if (repository != null) {
-			repository.shutDown();
-			repository = null;
-		}
-		store = null;
-		storeConfig = null;
-//		restoreBenchmarkEstimatorProperties();
-	}
-
 	@Test
-	@Disabled
+	@Disabled("Disabled until we can verify if this test is correct or not")
 	public void benchmarkQuery() throws IOException {
 		themeName = "LIBRARY";
 		z_queryIndex = 7;
@@ -673,6 +904,23 @@ public class ThemeQueryBenchmark {
 	@Test
 	@Disabled
 	@Timeout(value = 5, unit = TimeUnit.MINUTES)
+	public void executeQueryReturnsAggregateMemberCountForLibraryQueryNine() throws IOException {
+		themeName = "LIBRARY";
+		z_queryIndex = 9;
+		setup();
+		try {
+			long expectedCountBindingValue = ThemeQueryCatalog.expectedCountBindingValueFor(theme, z_queryIndex)
+					.orElseThrow();
+			assertEquals(expectedCountBindingValue, executeQuery(),
+					"Library q9 must validate the aggregate member count, not only the aggregate result row");
+		} finally {
+			tearDown();
+		}
+	}
+
+	@Test
+	@Timeout(value = 5, unit = TimeUnit.MINUTES)
+	@Disabled("Disabled until we can verify if this test is correct or not")
 	public void testQueryExplanation() throws IOException {
 		var queryIndexes = paramValues("z_queryIndex");
 		var themeNames = paramValues("themeName");
@@ -737,6 +985,9 @@ public class ThemeQueryBenchmark {
 		} catch (NoSuchFieldException e) {
 			throw new IllegalStateException("Missing field " + fieldName, e);
 		}
+	}
+
+	private record QueryResultSummary(long rowCount, Long countBindingValue) {
 	}
 
 	private record DbFileSizes(long triplesDataSizeBytes, long valuesDataSizeBytes) {
